# dpcnorm

./: .gitignore  AppIcon.icns  Cargo.toml
icons/: icon_ai_redraw.afdesign
output_bundles/DPCNorm.app/Contents/: Info.plist
output_bundles/DPCNorm.app/Contents/Resources/: AppIcon.icns  dpcnorm_settings.toml  script
src/: main.rs
