[package]
name = "dpcnorm"
description = "Normalise DPC sermons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.bundle]
name = "dpcnorm"
identifier = "au.id.jamesmckay.dpcnorm"
version = "0.1.0"
short_description = "Normalise DPC sermons"
icon = ["icon1024x1024.png"]
resources = ["icons"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
tinyfiledialogs = "3.9.1"
toml = "0.8.10"
